<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <View
            android:id="@+id/red_background"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:background="#8B0000"
            app:layout_constraintBottom_toBottomOf="@+id/detailPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.752" />

        <ImageView
            android:id="@+id/detailPhoto"
            android:layout_width="0dp"
            android:layout_height="224dp"
            android:contentDescription="@string/detail_player"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135"
            tools:src="@tools:sample/avatars"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alatsi"
            android:textColor="#A62C2C"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPhoto"
            app:layout_constraintVertical_bias="0.075"
            tools:text="@string/heroes_name" />

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailName"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>